Moved chat to the right side (where it should always have been). And fixed some layout issues.

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@ body,
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 20px;
+    margin: '20 20 10 20';
     width: 100%;
 }
